--- a/src/index.css
+++ b/src/index.css
@@ -4,9 +4,10 @@
 @custom-variant dark (&:is(.dark *));
 
 :root {
-    font-family:
+    /* font-family:
         "Exocet Blizzard MixedCaps", "Lato", system-ui, Avenir, Helvetica,
-        Arial, sans-serif;
+        Arial, sans-serif; */
+    font-family: "Lato", system-ui, Avenir, Helvetica, Arial, sans-serif;
     line-height: 1.5;
     font-weight: 400;
 
@@ -26,7 +27,7 @@
     --card-foreground: oklch(0.93 0.02 79);
     --popover: oklch(0.205 0 0);
     --popover-foreground: oklch(0.93 0.02 79);
-    --primary: oklch(0.71 0.1 86.6);
+    --primary: oklch(0.7699 0.0817 91.74); /* #C7B377 */
     --primary-foreground: oklch(0.2 0.0407 87.31);
     --secondary: oklch(0.269 0 0);
     --secondary-foreground: oklch(0.93 0.02 79);
@@ -93,6 +94,10 @@ body {
     background-image: url("/assets/noisy-texture-100x100_background.png");
     background-repeat: repeat;
     min-height: 100dvh;
+}
+
+.font-diablo {
+    font-family: "Exocet Blizzard MixedCaps";
 }
 
 @theme inline {
