--- a/src/fonts.css
+++ b/src/fonts.css
@@ -1,6 +1,6 @@
 @font-face {
     font-family: "Exocet Blizzard MixedCaps";
-    src: url("./assets/ExocetBlizzardOT-Heavy-MixedCaps.woff2") format("woff2");
+    src: url("/assets/ExocetBlizzardOT-Heavy-MixedCaps.woff2") format("woff2");
     font-display: swap;
     font-weight: 400;
 }
