--- a/src/index.css
+++ b/src/index.css
@@ -91,11 +91,11 @@
 
 html {
     scroll-padding-top: calc(var(--spacing) * 8);
+    background-image: url("/assets/noisy-texture-100x100_background.png");
+    background-repeat: repeat;
 }
 body {
     margin: 0;
-    background-image: url("/assets/noisy-texture-100x100_background.png");
-    background-repeat: repeat;
     min-height: 100dvh;
 }
 
@@ -183,6 +183,6 @@ body {
         @apply border-border outline-ring/50;
     }
     body {
-        @apply bg-background text-foreground;
+        @apply text-foreground;
     }
 }
