--- a/src/components/layout/Header.module.scss
+++ b/src/components/layout/Header.module.scss
@@ -8,3 +8,9 @@
         font-family: "Exocet Blizzard MixedCaps";
     }
 }
+
+.searchbar {
+    background-image: url("/assets/noisy-texture-100x100_background.png");
+    background-repeat: repeat;
+    z-index: 1;
+}
